--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "globals": "^15.9.0",
     "vite": "^5.4.0"
   },
-  "homepage": "https://himesh-kundal.github.io/CGS-Website"
+  "homepage": "https://Himesh-Kundal.github.io/CGS-Website"
 }
