--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
+  "homepage": "https://Himesh-Kundal.github.io/CGS-Website",
   "name": "cgs-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -27,6 +28,5 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "vite": "^5.4.0"
-  },
-  "homepage": "https://Himesh-Kundal.github.io/CGS-Website"
+  }
 }
